# usp_exercises

./: .gitignore  Makefile.am  README  autogen.sh  configure.ac
book/: Makefile.am  atomic_logger.c  configure.ac  makeargv.c  makeargv.h
ch02/: Makefile.am  configure.ac
ch02/env-utility/: .gitignore  Makefile.am  configure.ac  doenv.c
ch02/ex12/: Makefile.am  configure.ac  doenv  doenv.c
ch02/ex12/.deps/: doenv.Po
ch02/ex13/: Makefile.am  configure.ac  liblog.c  log.c  log.h  test  test.c  test_log.c
ch02/message-logging/: Makefile.am  configure.ac  log.c  test.c
ch03/: Makefile.am  configure.ac
ch03/process-chains/: .gitignore  Makefile.am  chaoticchain.c  configure.ac  patientchain.c  simplechain.c  sleepychain.c  weirdchain.c  weirdwaitchain.c
ch03/process-fans/: .gitignore  Makefile.am  configure.ac  runsim.c  testing_long.data  testing_short.data  testsim.c
ch04/: Makefile.am  configure.ac
ch04/atomic-logging/: .gitignore  Makefile.am  chainforkappend.c  chainforkappendsleep.c  chainforkopen.c  chainforkopenseek.c  chainopenfork.c  chainopenforksleep.c  configure.ac
ch04/cat-utility/: Makefile.am  cat.c  configure.ac
ch05/: Makefile.am  configure.ac
ch05/biffing/: .gitignore  Makefile.am  configure.ac  simplebiff.c
ch05/news-biff/: .gitignore  Makefile.am  configure.ac  newsbiff.c
ch05/traversing-directories/: .gitignore  Makefile.am  configure.ac  mydu.c
ch05/which-command/: Makefile.am  configure.ac  which.c
ch06/: Makefile.am  configure.ac
ch06/barriers/: Makefile.am  barrier.c  barrier.h  barrierd.c  configure.ac  test.c
ch06/client-server/: .gitignore  Makefile.am  configure.ac  pipeclient.c  pipeserver.c
ch06/stty-command/: Makefile.am  configure.ac  stty.c
ch07/: Makefile.am  configure.ac
ch07/fib/: Makefile.am  configure.ac  fib.c
ch07/ring/: .gitignore  Makefile.am  configure.ac  ring  ring.c
ch08/: Makefile.am  configure.ac
common/: Makefile.am  configure.ac  custom.c  custom.h  emalloc.c
