## Non GNU complient  project
AUTOMAKE_OPTIONS = foreign

AM_CPPFLAGS = -ansi -pedantic -Wall -Wextra -Wformat=2 -Wfloat-equal -Wundef -Wshadow -Wcast-qual -Wwrite-strings -Wbad-function-cast -Wmissing-declarations 

lib_LTLIBRARIES = libcustom.la
libcustom_la_SOURCES = custom.c
include_HEADERS = custom.h
libcustom_la_LDFLAGS = -version-info 0:0:0
