## Non GNU complient  project
AUTOMAKE_OPTIONS = foreign

INCLUDES = -I../../common

bin_PROGRAMS = doenv
doenv_SOURCES = doenv.c
doenv_LDADD = ../../common/libemalloc.la

AM_CPPFLAGS = -ansi -pedantic -Wall -Wextra -Wformat=2 -Wfloat-equal -Wundef -Wshadow -Wcast-qual -Wwrite-strings -Wbad-function-cast -Wmissing-declarations 
