## Non GNU complient  project
AUTOMAKE_OPTIONS = foreign

AM_CPPFLAGS = -ansi -pedantic -Wall -Wextra -Wformat=2 -Wfloat-equal -Wundef -Wshadow -Wcast-qual -Wwrite-strings -Wbad-function-cast -Wmissing-declarations 

##bin_PROGRAMS = simplechain sleepychain patientchain chaoticchain weirdchain weirdwaitchain
##simplechain_SOURCES = simplechain.c
